# SR_ANPR_SDK

./: .gitignore  LICENSE-SAMPLES.txt  LICENSE-SDK.txt  PACKAGING.md  README.md
Titan-ANPR-Linux/: CMakeLists.txt  README.md
Titan-ANPR-Linux/include/: titan_anpr.h  titan_license.h
Titan-ANPR-Linux/src/: sample_cli.cpp  titan_license_stub.cpp
docs/: README.md  THIRD_PARTY_NOTICES.txt
include/: titan_anpr.h  titan_license.h
lib/: Titan-ANPR.lib
samples/csharp/: README.md  Titan.Anpr.Samples.sln
samples/csharp/src/Titan.Anpr.DetectionConsole/: OverlayPreviewForm.cs  OverlayRenderer.cs  Program.cs  Titan.Anpr.DetectionConsole.csproj
samples/csharp/src/Titan.Anpr.LicenseConsole/: Program.cs  Titan.Anpr.LicenseConsole.csproj
samples/csharp/src/Titan.Anpr.NativeInterop/: NativeDll.cs  Titan.Anpr.NativeInterop.csproj  TitanAnprNative.cs  TitanLicenseNative.cs
samples/python/: README.md  example_detect.py  example_license.py  titan_anpr_bindings.py
